Created results activity and cleanup of code.

--- a/RuzzleResolver/res/values/strings.xml
+++ b/RuzzleResolver/res/values/strings.xml
@@ -2,7 +2,9 @@
 <resources>
 
     <string name="app_name">RuzzleResolver</string>
-    <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
+    <string name="buttonLabel">Kör!</string>
+    <string name="hello_world">Hello world!</string>
+    <string name="title_activity_results">ResultsActivity</string>
 
 </resources>
