--- a/RuzzleResolver/res/values/strings.xml
+++ b/RuzzleResolver/res/values/strings.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">RuzzleResolver</string>
+    <string name="app_name">Ruzzle Resolver</string>
     <string name="menu_settings">Settings</string>
-    <string name="buttonLabel">Kör!</string>
-    <string name="hello_world">Hello world!</string>
-    <string name="title_activity_results">ResultsActivity</string>
+    <string name="buttonLabel">Hitta ord!</string>
+    <string name="title_activity_results">Funna ord</string>
 
 </resources>
