--- a/RuzzleResolver/res/values/strings.xml
+++ b/RuzzleResolver/res/values/strings.xml
@@ -5,5 +5,7 @@
     <string name="menu_settings">Settings</string>
     <string name="buttonLabel">Hitta ord!</string>
     <string name="title_activity_results">Funna ord</string>
+    <string name="hello_world">Hello world!</string>
+    <string name="title_activity_path">PathActivity</string>
 
 </resources>
