--- a/RuzzleResolver/res/values-sv/strings.xml
+++ b/RuzzleResolver/res/values-sv/strings.xml
@@ -3,7 +3,8 @@
 
     <string name="app_name">Ruzzle Resolver</string>
     <string name="menu_settings">Inställningar</string>
-    <string name="buttonLabel">Hitta ord!</string>
+    <string name="buttonLabel">Hitta ord</string>
+    <string name="clearButtonLabel">Rensa</string>
     <string name="title_activity_results">Funna ord</string>
     <string name="title_activity_path">Visar hur ordet kan skapas</string>
     <string name="input_error_title">Inmatningsfel</string>
