--- a/RuzzleResolver/res/values/strings.xml
+++ b/RuzzleResolver/res/values/strings.xml
@@ -3,7 +3,8 @@
 
     <string name="app_name">Ruzzle Resolver</string>
     <string name="menu_settings">Settings</string>
-    <string name="buttonLabel">Find words!</string>
+    <string name="buttonLabel">Find words</string>
+    <string name="clearButtonLabel">Clear</string>
     <string name="title_activity_results">Found words</string>
     <string name="title_activity_path">Shows how the word can be created</string>
     <string name="input_error_title">Input error</string>
